fix: fix checkbox focus style

--- a/source/sass/blocks/checkbox.scss
+++ b/source/sass/blocks/checkbox.scss
@@ -32,7 +32,7 @@
   border-color: $checkbox-border-alter-color;
 }
 
-.checkbox__control:focus-within + .checkbox__label::before {
+.checkbox__control:focus-visible + .checkbox__label::before {
   outline-color: $text-color-additional;
 }
 
