--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,6 +6,7 @@
 // Blocks
 
 @import "blocks/page.scss";
+@import "blocks/preloader.scss";
 @import "blocks/page-header.scss";
 @import "blocks/container.scss";
 @import "blocks/site-navigation.scss";
