refactor: replace viewport variables

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -48,7 +48,7 @@
   font-size: inherit;
   line-height: inherit;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     padding-top: 13px;
     padding-bottom: 13px;
   }
