--- a/source/sass/blocks/checkbox-group.scss
+++ b/source/sass/blocks/checkbox-group.scss
@@ -2,13 +2,13 @@
   display: grid;
   row-gap: 12px;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     grid-template-columns: 1fr 1fr;
     column-gap: 60px;
     row-gap: 32px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     grid-template-columns: repeat(4, 1fr);
     column-gap: 80px;
   }
