--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -4,12 +4,12 @@
   font-size: 14px;
   line-height: 20px;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     font-size: 16px;
     line-height: 20px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     grid-template-columns: 1fr 1220px 1fr;
     align-items: center;
   }
@@ -22,12 +22,12 @@
   column-gap: 12px;
   background-color: $background-color;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     column-gap: 40px;
     padding: 57px 70px 62px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     z-index: 3;
     grid-row: 1 / 2;
     grid-column: 2 / 3;
@@ -42,7 +42,7 @@
 }
 
 .contacts__card--alter {
-  @media (max-width: $tablet-max-width) {
+  @media #{$mobile-tablet} {
     background-color: transparent;
   }
 }
@@ -54,7 +54,7 @@
   line-height: 20px;
   text-transform: uppercase;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     font-size: 20px;
     line-height: 26px;
   }
@@ -64,7 +64,7 @@
   font-style: normal;
   color: $text-color-additional;
 
-  @media (min-width: $tablet-width) and (max-width: $tablet-max-width) {
+  @media #{$tablet} {
     text-align: right;
   }
 }
@@ -75,7 +75,7 @@
 }
 
 .contacts__text-part {
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     margin-top: 20px;
   }
 }
@@ -86,11 +86,11 @@
   height: 100%;
   min-height: 362px;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     min-height: 400px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     grid-row: 1 / 2;
   }
 }
@@ -108,7 +108,7 @@
   grid-column: 1 / -1;
   height: 100%;
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     grid-row: 1 / 2;
   }
 }
