--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,13 +1,13 @@
 .features {
   padding: 22px 0 49px;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     padding-top: 45px;
     padding-bottom: 56px;
     border-bottom: 1px solid $features-section-border-color;
   }
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     padding-top: 70px;
     padding-bottom: 19px;
     border-bottom: none;
@@ -17,7 +17,7 @@
 .features__heading {
   margin: 0 0 42px;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     margin-bottom: 72px;
   }
 }
@@ -30,14 +30,14 @@
   color: $text-color-additional;
   list-style: none;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     grid-template-columns: 1fr 1fr;
     row-gap: 87px;
     column-gap: 60px;
     counter-reset: features;
   }
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     grid-template-columns: repeat(4, 1fr);
     column-gap: 80px;
   }
@@ -49,7 +49,7 @@
   column-gap: 20px;
   align-items: center;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     position: relative;
     width: 245px;
     min-height: 230px;
@@ -70,14 +70,14 @@
   background-repeat: no-repeat;
   background-position: center;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     width: 80px;
     height: 80px;
   }
 }
 
 .features__item::after {
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     content: counter(features);
     position: absolute;
     z-index: -1;
