--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -5,7 +5,7 @@
   line-height: 20px;
   text-transform: uppercase;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     padding-bottom: 81px;
     font-size: 20px;
     line-height: 28px;
@@ -18,7 +18,7 @@
   font-size: 14px;
   line-height: 18px;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     width: 360px;
     margin-bottom: 65px;
     font-size: 20px;
@@ -31,7 +31,7 @@
   border: none;
   margin: 0;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     padding-bottom: 45px;
   }
 }
@@ -39,7 +39,7 @@
 .form__section-heading {
   margin: 0 0 35px;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     grid-column: 1 / 3;
     margin-bottom: 76px;
   }
@@ -48,7 +48,7 @@
 .form__field {
   margin: 0 0 14px;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     margin-bottom: 19px;
   }
 }
@@ -56,12 +56,12 @@
 .form__radiogroup {
   margin: 23px 0 16px;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     margin-top: 72px;
     margin-bottom: 28px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     grid-row: 1 / 4;
     grid-column: 2 / 3;
     margin-top: 0;
@@ -73,7 +73,7 @@
   margin: 24px 0 0;
   text-align: center;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     display: grid;
     margin-top: 8px;
     grid-template-columns: 1fr 1fr;
@@ -82,7 +82,7 @@
     text-align: left;
   }
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     margin-top: 0;
   }
 }
@@ -91,7 +91,7 @@
   width: 100%;
   margin: 0 0 17px;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     margin-bottom: 0;
   }
 }
@@ -102,14 +102,14 @@
   line-height: 16px;
   text-transform: none;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     font-size: 16px;
     line-height: 18px;
   }
 }
 
 .form__section--user {
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     display: grid;
     margin-bottom: 23px;
     grid-template-columns: 1fr 1fr;
@@ -119,13 +119,13 @@
 }
 
 .form__section--user .form__field {
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     margin-bottom: 0;
   }
 }
 
 .form__section--contacts {
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 80px;
