--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -6,18 +6,18 @@
   font-size: 14px;
   line-height: 20px;
 
-  @media (max-width: $mobile-max-width) {
+  @media #{$mobile} {
     color: $text-color-secondary;
   }
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     padding-top: 40px;
     padding-bottom: 0;
     font-size: 20px;
     line-height: 28px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     position: static;
     min-height: 554px;
     padding-top: 0;
@@ -41,68 +41,67 @@
   background-position: center;
   background-size: cover;
 
-  @media (min-width: $mobile-min-width-greater) {
-    --hero-background-image: url("../img/backgrounds/hero-background-wide-mobile.jpg");
+  @media #{$retina-2x} {
+    --hero-background-image: url("../img/backgrounds/hero-background@2x.jpg");
   }
 
-  @media (min-resolution: 2dppx) {
-    --hero-background-image: url("../img/backgrounds/hero-background@2x.jpg");
+  @media #{$retina-3x} {
+    --hero-background-image: url("../img/backgrounds/hero-background@3x.jpg");
+  }
 
-    @media (min-width: $mobile-min-width-greater) {
+  @media #{$retina-4x} {
+    --hero-background-image: url("../img/backgrounds/hero-background@4x.jpg");
+  }
+
+  @media #{$wide-mobile} {
+    --hero-background-image: url("../img/backgrounds/hero-background-wide-mobile.jpg");
+
+    @media #{$retina-2x} {
       --hero-background-image: url("../img/backgrounds/hero-background-wide-mobile@2x.jpg");
     }
-  }
 
-  @media (min-resolution: 3dppx) {
-    --hero-background-image: url("../img/backgrounds/hero-background@3x.jpg");
-
-    @media (min-width: $mobile-min-width-greater) {
+    @media #{$retina-3x} {
       --hero-background-image: url("../img/backgrounds/hero-background-wide-mobile@3x.jpg");
     }
-  }
 
-  @media (min-resolution: 4dppx) {
-    --hero-background-image: url("../img/backgrounds/hero-background@4x.jpg");
-
-    @media (min-width: $mobile-min-width-greater) {
+    @media #{$retina-4x} {
       --hero-background-image: url("../img/backgrounds/hero-background-wide-mobile@4x.jpg");
     }
   }
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet} {
     display: none;
   }
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     left: 50%;
-    display: block;
     height: 694px;
     --hero-background-image: url("../img/backgrounds/hero-background-desktop.jpg");
 
-    @media (min-resolution: 2dppx) {
+    @media #{$retina-2x} {
       --hero-background-image: url("../img/backgrounds/hero-background-desktop@2x.jpg");
     }
 
-    @media (min-resolution: 3dppx) {
+    @media #{$retina-3x} {
       --hero-background-image: url("../img/backgrounds/hero-background-desktop@3x.jpg");
     }
 
-    @media (min-resolution: 4dppx) {
+    @media #{$retina-4x} {
       --hero-background-image: url("../img/backgrounds/hero-background-desktop@4x.jpg");
     }
   }
 
-  @media (min-width: $wide-desktop-width) {
+  @media #{$wide-desktop} {
     --hero-background-image: url("../img/backgrounds/hero-background-desktop@2x.jpg");
 
-    @media (min-resolution: 2dppx) {
+    @media #{$retina-2x} {
       --hero-background-image: url("../img/backgrounds/hero-background-desktop@4x.jpg");
     }
   }
 }
 
 .hero__container {
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     display: grid;
     grid-template-rows: min-content 1fr;
     grid-template-areas:
@@ -113,7 +112,7 @@
     text-align: start;
   }
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     grid-template-columns: 50% 50%;
   }
 }
@@ -121,13 +120,13 @@
 .hero__header {
   margin: 0 0 26px;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     margin-right: 84px;
     margin-left: 84px;
     margin-bottom: 0;
   }
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     margin-top: 82px;
   }
 }
@@ -135,7 +134,7 @@
 .hero__heading {
   margin: 0 0 22px;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     margin-bottom: 37px;
   }
 }
@@ -144,7 +143,7 @@
   margin: 0 0 12px;
   text-transform: uppercase;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     margin-bottom: 17px;
   }
 }
@@ -153,13 +152,13 @@
   display: block;
   margin: 0 0 3px;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop}{
     grid-area: row-2;
     justify-self: center;
     margin-bottom: 0;
   }
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     grid-row: 1 / -1;
     grid-column: 2 / 3;
     transform: translateX(-191px);
@@ -175,7 +174,7 @@
 .hero__link {
   width: 100%;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     grid-area: row-2;
     width: auto;
     margin: 29px 0 0 87px;
