--- a/source/sass/blocks/preloader.scss
+++ b/source/sass/blocks/preloader.scss
@@ -33,13 +33,13 @@
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     width: 118px;
     height: 100px;
     background-image: url("../img/logo-tablet.svg");
   }
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     width: 142px;
     height: 118px;
     background-image: url("../img/logo-desktop.svg");
