--- a/source/sass/blocks/price-list.scss
+++ b/source/sass/blocks/price-list.scss
@@ -3,7 +3,7 @@
   line-height: 16px;
   border-collapse: collapse;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     font-size: 16px;
     line-height: 20px;
   }
@@ -14,13 +14,13 @@
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   column-gap: 40px;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     grid-template-columns: repeat(auto-fit, minmax(324px, 1fr));
     row-gap: 23px;
     column-gap: 60px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     grid-template-columns: repeat(auto-fit, minmax(245px, 1fr));
     row-gap: 28px;
     column-gap: 80px;
@@ -30,14 +30,14 @@
 .price-list__item {
   display: grid;
 
-  @media (max-width: $mobile-max-width) {
+  @media #{$mobile} {
     position: relative;
     padding: 21px 0 24px;
     grid-template-rows: repeat(3, auto) 1fr auto;
     grid-template-columns: 1fr 1fr;
   }
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     padding: 44px 36px 39px;
     background-image: linear-gradient(to bottom, transparent 118px, $price-list-item-tablet-background-color 118px);
   }
@@ -45,7 +45,7 @@
 
 .price-list__item::before,
 .price-list__item::after {
-  @media (max-width: $mobile-max-width) {
+  @media #{$mobile} {
     content: "";
     position: absolute;
     right: -20px;
@@ -64,7 +64,7 @@
 }
 
 .price-list__name {
-  @media (max-width: $mobile-max-width) {
+  @media #{$mobile} {
     grid-column: 2 / 3;
     text-align: left;
   }
@@ -80,7 +80,7 @@
   text-transform: uppercase;
   color: $price-list-name-color;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     justify-self: center;
     width: 170px;
     font-size: 20px;
@@ -111,14 +111,14 @@
 }
 
 .price-list__image-wrapper {
-  @media (max-width: $mobile-max-width) {
+  @media #{$mobile} {
     grid-row: 1 / 5;
   }
 
   padding: 0 10px;
   text-align: center;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     order: -1;
     padding-right: 0;
     padding-left: 0;
@@ -151,7 +151,7 @@
   object-fit: scale-down;
   object-position: center;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     width: 168px;
     height: 200px;
     object-position: center bottom;
@@ -159,7 +159,7 @@
 }
 
 .price-list__detail {
-  @media (max-width: $mobile-max-width) {
+  @media #{$mobile} {
     grid-column: 2 / 3;
   }
 
@@ -170,7 +170,7 @@
   padding: 0;
   color: $text-color-additional;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     padding-top: 5px;
     padding-bottom: 6px;
     border-bottom: 1px solid $price-list-item-detail-line-color;
@@ -178,14 +178,14 @@
 }
 
 .price-list__button-wrapper {
-  @media (max-width: $mobile-max-width) {
+  @media #{$mobile} {
     grid-column: 1 / 3;
   }
 
   padding: 0;
   margin-top: 8px;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     margin-top: 32px;
   }
 }
@@ -195,7 +195,7 @@
 }
 
 .price-list__info {
-  @media (max-width: $mobile-max-width) {
+  @media #{$mobile} {
     position: relative;
   }
 
@@ -203,7 +203,7 @@
   flex-direction: column;
   padding: 24px 0 23px;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     padding: 51px 36px 35px;
     border: 2px solid $price-list-info-border-color;
     margin-top: 118px;
@@ -213,7 +213,7 @@
 
 .price-list__info::before,
 .price-list__info::after {
-  @media (max-width: $mobile-max-width) {
+  @media #{$mobile} {
     content: "";
     position: absolute;
     right: -20px;
@@ -245,12 +245,12 @@
   text-transform: uppercase;
   color: $price-list-info-heading-color;
 
-  @media (min-width: $tablet-width) and (max-width: $tablet-max-width) {
+  @media #{$tablet} {
     padding-right: 36px;
     padding-left: 36px;
   }
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     margin-bottom: 20px;
     font-size: 20px;
     line-height: 24px;
@@ -265,7 +265,7 @@
   background-repeat: no-repeat;
   background-position: center;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     width: 60px;
     height: 60px;
     margin-bottom: 23px;
@@ -277,7 +277,7 @@
   margin: 0 0 20px;
   text-align: center;
 
-  @media (min-width: $tablet-width) and (max-width: $tablet-max-width) {
+  @media #{$tablet} {
     padding-right: 12px;
     padding-left: 12px;
   }
