--- a/source/sass/blocks/site-navigation.scss
+++ b/source/sass/blocks/site-navigation.scss
@@ -2,7 +2,7 @@
   padding: 0;
   list-style: none;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
@@ -10,19 +10,19 @@
 }
 
 .site-navigation__item {
-  @media (max-width: $mobile-max-width) {
+  @media #{$mobile} {
     position: relative;
     padding: 10px 20px 10px;
     text-align: center;
   }
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     margin-left: 36px;
   }
 }
 
 .site-navigation__item::before {
-  @media (max-width: $mobile-max-width) {
+  @media #{$mobile} {
     content: "";
     position: absolute;
     top: 0;
@@ -61,7 +61,7 @@
     opacity: 0.3;
   }
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     padding-top: 10px;
     padding-bottom: 10px;
     font-size: 18px;
@@ -69,7 +69,7 @@
     font-weight: inherit;
   }
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     padding-top: 9px;
     padding-bottom: 9px;
     font-size: 20px;
@@ -88,13 +88,13 @@
 }
 
 .site-navigation--alter {
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     color: $text-color-secondary;
   }
 }
 
 .site-navigation--alter .site-navigation__link--current::after {
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     background-color: currentColor;
   }
 }
