--- a/source/sass/blocks/statistics.scss
+++ b/source/sass/blocks/statistics.scss
@@ -1,5 +1,5 @@
 .statistics__container {
-  @media (min-width: $tablet-width) and (max-width: $tablet-max-width) {
+  @media #{$tablet} {
     position: relative;
   }
 }
@@ -17,7 +17,7 @@
   line-height: 20px;
   text-transform: uppercase;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     grid-template-columns: 23% 23%;
     row-gap: 16px;
     column-gap: 40px;
@@ -25,7 +25,7 @@
     line-height: 28px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     grid-template-columns: 37% 37%;
   }
 }
@@ -53,7 +53,7 @@
   background-color: $demo-section-background-color;
   transform: translateY(-0.8em);
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     max-width: 88%;
     padding-right: 8px;
     padding-left: 8px;
@@ -63,7 +63,7 @@
     transform: translateY(-0.6em);
   }
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     background-color: $background-color-secondary;
   }
 }
@@ -76,7 +76,7 @@
   font-size: 24px;
   line-height: 28px;
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet} {
     padding: 16px 12px 20px;
     font-size: 30px;
     line-height: 34px;
@@ -88,7 +88,7 @@
   display: flex;
   margin: 0 auto;
 
-  @media (min-width: $tablet-width) and (max-width: $tablet-max-width) {
+  @media #{$tablet} {
     position: absolute;
     top: 8px;
     right: 0;
@@ -96,14 +96,14 @@
     text-align: right;
   }
 
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     margin-top: 25px;
     margin-left: 0;
   }
 }
 
 .statistics__item--summary .statistics__name {
-  @media (min-width: $desktop-width) {
+  @media #{$desktop} {
     margin-right: 63px;
   }
 }
@@ -111,7 +111,7 @@
 .statistics__item--summary .statistics__value::before  {
   content: "\A0";
 
-  @media (min-width: $tablet-width) {
+  @media #{$tablet-desktop} {
     display: none;
   }
 }
