--- a/source/sass/blocks/price-list.scss
+++ b/source/sass/blocks/price-list.scss
@@ -92,8 +92,6 @@
   display: inline-block;
   text-decoration: none;
   color: inherit;
-  outline: 2px solid transparent;
-  outline-offset: 2px;
   transition-property: opacity, outline-color;
   transition-duration: $animation-duration;
 
@@ -101,9 +99,7 @@
     opacity: 0.6;
   }
 
-  &:focus-visible {
-    outline-color: $text-color-additional;
-  }
+  @include focus;
 
   &:active {
     opacity: 0.3;
@@ -127,8 +123,6 @@
 }
 
 .price-list__image-link {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
   transition-property: opacity, outline-color;
   transition-duration: $animation-duration;
 
@@ -136,9 +130,7 @@
     opacity: 0.6;
   }
 
-  &:focus-visible {
-    outline-color: $text-color-additional;
-  }
+  @include focus;
 
   &:active {
     opacity: 0.3;
