--- a/source/sass/blocks/site-navigation.scss
+++ b/source/sass/blocks/site-navigation.scss
@@ -44,8 +44,6 @@
   text-transform: uppercase;
   text-decoration: none;
   color: inherit;
-  outline: 2px solid transparent;
-  outline-offset: 2px;
   transition-property: opacity, outline-color;
   transition-duration: $animation-duration;
 
@@ -53,9 +51,7 @@
     opacity: 0.6;
   }
 
-  &[href]:focus-visible {
-    outline-color: $text-color-additional;
-  }
+  @include focus(currentColor);
 
   &[href]:active {
     opacity: 0.3;
