--- a/source/sass/blocks/statistics.scss
+++ b/source/sass/blocks/statistics.scss
@@ -18,7 +18,7 @@
   text-transform: uppercase;
 
   @media #{$tablet-desktop} {
-    grid-template-columns: 23% 23%;
+    grid-template-columns: auto auto 1fr;
     row-gap: 16px;
     column-gap: 40px;
     font-size: 20px;
@@ -39,6 +39,10 @@
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
+
+  @media #{$tablet} {
+    width: 162px;
+  }
 }
 
 .statistics__item--accent .statistics__name {
@@ -76,7 +80,7 @@
   font-size: 24px;
   line-height: 28px;
 
-  @media #{$tablet} {
+  @media #{$tablet-desktop} {
     padding: 16px 12px 20px;
     font-size: 30px;
     line-height: 34px;
@@ -85,20 +89,20 @@
 
 .statistics__item--summary {
   grid-column: 1 / -1;
+  justify-self: center;
   display: flex;
-  margin: 0 auto;
 
   @media #{$tablet} {
-    position: absolute;
-    top: 8px;
-    right: 0;
+    grid-column: 3 / 4;
+    justify-self: end;
     display: block;
+    margin-top: 7px;
     text-align: right;
   }
 
   @media #{$desktop} {
+    justify-self: start;
     margin-top: 25px;
-    margin-left: 0;
   }
 }
 
